--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ langgraph = "^0.2.39"
 langchain-core = "^0.3.12"
 langchain = "^0.3.4"
 python-dotenv = "^1.0.1"
+pillow = "^11.0.0"
 
 
 [build-system]
