--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ langchain-core = "^0.3.12"
 langchain = "^0.3.4"
 python-dotenv = "^1.0.1"
 pillow = "^11.0.0"
+pyrogram = "^2.0.106"
 
 
 [build-system]
